skeleton index 1st commit

--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Hello World!</title>
-<link rel="stylesheet" href="bluestyle.css">
+  <meta charset="UTF-8">
+  <title>Hello World!</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="stylesheet" href="bluestyle.css">
 </head>
 <body>
 
@@ -13,5 +15,6 @@
 <div><img src="img_hello_git.jpg" alt="Hello World from Space" style="width:100%;max-width:1960px"></div>
 <p>bla bla blaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
 <p>changeddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd</p>
+  <p>skeleton branch</p>
 </body>
 </html>
